testsuite/tests/indexed-types/should_fail/T14045a.stderr

T14045a.hs:11:3: error:
    • Type indexes must match class instance head
      Expected: S z
        Actual: S a
    • In the data instance declaration for ‘S’
      In the instance declaration for ‘C (z :: Bool)’
